# physics-lab

./: CMakeLists.txt  README.md  input.json
.github/workflows/: build.yml
src/: physics_lab.cpp
src/core/: Engine.cpp  Engine.hpp  Logger.cpp  Logger.hpp  Renderer.cpp  Renderer.hpp  Window.cpp  Window.hpp  constants.hpp  types.hpp
src/fileio/: SceneLoader.cpp  SceneLoader.hpp
src/physics/: CpuParticleIntegrator.cpp  CpuParticleIntegrator.hpp  Integrator.hpp  Particle.cpp  Particle.hpp  PhysicsSystem.cpp  PhysicsSystem.hpp
